--- a/subgroup B/B2_optimise_guest_experience.ipynb
+++ b/subgroup B/B2_optimise_guest_experience.ipynb
@@ -50,8 +50,8 @@
    "outputs": [],
    "source": [
     "# Load in datasets\n",
-    "survey_data = pd.read_csv('final_synthetic_data.csv')\n",
-    "forecast_data = pd.read_csv('collated_forecasts_per_ride.csv')"
+    "survey_data = pd.read_csv('../data/final_synthetic_data.csv')\n",
+    "forecast_data = pd.read_csv('../data/collated_forecasts_per_ride.csv')"
    ]
   },
   {
