--- a/subgroup B/B2_optimise_guest_experience.ipynb
+++ b/subgroup B/B2_optimise_guest_experience.ipynb
@@ -1715,7 +1715,7 @@
    "source": [
     "Analysis of simulation results:\n",
     "\n",
-    "In summary, our simulation indicates that optimising ride capacities and distances has resulted in an impressive reduction of approximately 89.92 minutes in overall wait times compared to the projections from our demand forecasting model. This significant decrease demonstrates the effectiveness of our optimization strategies in enhancing guest experiences by minimizing wait times, which is crucial for boosting overall satisfaction.\n",
+    "In summary, our simulation indicates that optimising ride capacities and distances has resulted in an impressive reduction in overall wait times on most days compared to the projections from our demand forecasting model. This significant decrease demonstrates the effectiveness of our optimization strategies in enhancing guest experiences by minimizing wait times, which is crucial for boosting overall satisfaction.\n",
     "\n",
     "Furthermore, improved guest satisfaction often translates into increased revenue, as satisfied visitors are more likely to recommend the venue to others and return for future visits. By prioritizing guest experience through strategic enhancements, we can create a cycle of positive feedback that not only elevates guest satisfaction but also drives long-term financial success for the venue. "
    ]
