change csv name

--- a/subgroup B/B1_wait_data_simple_analysis_and_generation.ipynb
+++ b/subgroup B/B1_wait_data_simple_analysis_and_generation.ipynb
@@ -29,7 +29,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "raw_wait_time_df = pd.read_csv(\"../data/waittime_combined.csv\")"
+    "raw_wait_time_df = pd.read_csv(\"../data/real_wait_time_data.csv\")"
    ]
   },
   {
