--- a/subgroup B/B3_resource_allocation_optimization.ipynb
+++ b/subgroup B/B3_resource_allocation_optimization.ipynb
@@ -473,7 +473,7 @@
     "The wait time for each attraction $i$ after allocating $x_i$ staff can be represented as:\n",
     "$$\\text{adjusted\\_wait\\_time}_i = w_i \\times \\text{reduction\\_factor}^{x_i - m}$$\n",
     "where:\n",
-    "- $\\text{reduction\\_factor}$: each additional staff reduces the wait time by a factor, if $w_i=100 and $\\text{reduction\\_factor}=0.9$, then having 1 additional staff would mean $\\text{adjusted\\_wait\\_time}_i=100*0.9^{6-5}=90$\n",
+    "- $\\text{reduction\\_factor}$: each additional staff reduces the wait time by a factor, if $w_i=100$ and $\\text{reduction\\_factor}=0.9$, then having 1 additional staff would mean $\\text{adjusted\\_wait\\_time}_i=100*0.9^{6-5}=90$\n",
     "- $w_i$: wait time for attraction $i$\n",
     "- $m$: the minimum number of staff to be allocated per ride\n",
     "\n",
