Fix format B3_resource_allocation_optimization.ipynb

--- a/subgroup B/B3_resource_allocation_optimization.ipynb
+++ b/subgroup B/B3_resource_allocation_optimization.ipynb
@@ -14,7 +14,7 @@
     "The resources for this question will be the total number of staff. For attractions that require a longer wait time, we allocate more resources (staff) to that attraction. More staff means they can perform shifts, work faster in processing guests, and cater to those waiting in the queue like providing snacks or drinks. This could potentially shorten wait time, but mainly increase guest satisfaction and revenue, which aligns with the business objectives.\n",
     "\n",
     "#### Modelling\n",
-    "The \"model\" in this case is not a typical machine learning model as they are mainly used for predictions, but our problem deals with Optimization. We instead use linear Optimization, as we want to optimise an objective given resource limitations. We will also consider a greedy approach to minimise wait time. Since there are 2 models, we will choose the model that allocates more staff to the attraction that has the highest wait time.\n",
+    "The \"model\" in this case is not a typical machine learning model as they are mainly used for predictions, but our problem deals with Optimization. We instead use Linear Optimization, as we want to optimise an objective given resource limitations. We will also consider a greedy approach to minimise wait time. Since there are 2 models, we will choose the model that allocates more staff to the attraction that has the highest wait time.\n",
     "\n",
     "The good thing about greedy heuristic is that it always finds a feasible solution. It does so by iteratively reducing the wait time of the attraction with the longest wait time. However, the limitation of linear optimization is that it may fail to find feasible solutions sometimes. This doesn't mean that the linear optimization's solution is automatically better, but it allows the stakeholder to compare between the two allocations.\n",
     "\n",
@@ -123,7 +123,7 @@
    "source": [
     "### wait_times Dictionary \n",
     "\n",
-    "This dictionary simply maps the attraction names to their forecasted wait time for the date we chose above. This allows us to handle the linear Optimization later easier.\n",
+    "This dictionary simply maps the attraction names to their forecasted wait time for the date we chose above. This allows us to handle the Linear Optimization later easier.\n",
     "\n",
     "The dictionary also has been sorted by the forecasted wait time in ascending order as we want to compare the bar plots of attractions vs. forecasted wait time and attractions vs. staff allocated to see if they would look similar."
    ]
@@ -311,8 +311,8 @@
     "Constraint 3: each ride's staff allocation needs to be close to its target proportional allocation, with some minor deviations. This can be represented as:\n",
     "$$x_i = target_i + d_i$$\n",
     "where:\n",
-    "- $x_i: the number of staff allocated to attraction $i$\n",
-    "- $d_i: the devation of the staff allocated from the target staff allocated for attraction $i$"
+    "- $x_i$: the number of staff allocated to attraction $i$\n",
+    "- $d_i$: the devation of the staff allocated from the target staff allocated for attraction $i$"
    ]
   },
   {
