--- a/subgroup B/B3_resource_allocation_optimization.ipynb
+++ b/subgroup B/B3_resource_allocation_optimization.ipynb
@@ -904,9 +904,9 @@
    "source": [
     "## Deciding which allocation to use\n",
     "\n",
-    "In some cases, linear optimization will allocate more staff to the attraction with the highest wait time as compared to greedy heuristic. In other cases, greedy heuristic will allocate more staff to the attraction with the highest wait time as compared to linear optimization.\n",
-    "\n",
     "We will choose the model that allocates more to the attraction with highest wait time. We do so as it not only makes the most sense, but the relevant model follows more closely to the distribution of the bar plot in the attraction vs. wait times. This decision is done inside the choose_allocation function that picks the better allocation, showing the number of staff allocation per attraction, and shows the bar plot showing the allocation comparison.\n",
+    "\n",
+    "Additionally, there is an intersection, as seen from the graph above. At that point, Linear Optimization follows the distribution of attraction vs. wait times more closely, so we will be choosing Linear Optimization over Greedy Heuristic when the allocations to the attraction with the highest wait times are tied.\n",
     "\n",
     "The caveat is that sometimes, a more uniform distribution can be better, where the staff allocation is not all focused on the attraction with the highest wait time, but also consider the rest of the attractions. This is why the choice given by the model is likely one with good reasoning, but it ultimately depends on the user who decides the allocation. Having two different allocations means that the user can choose to pick the one not recommended by our model, should they see it being more fit to handle the guests waiting."
    ]
