--- a/subgroup B/B3_resource_allocation_optimization.ipynb
+++ b/subgroup B/B3_resource_allocation_optimization.ipynb
@@ -482,30 +482,30 @@
     "### Wait time\n",
     "\n",
     "The wait time for each attraction $i$ after allocating $x_i$ staff can be represented as:\n",
-    "$$\\text{adjusted\\_wait\\_time}_i = w_i \\times \\text{reduction\\_factor}^{x_i - m}$$\n",
+    "$$\text{adjusted\_wait\_time}_i = w_i \times \text{reduction\_factor}^{x_i - m}$$\n",
     "where:\n",
-    "- $\\text{reduction\\_factor}$: each additional staff reduces the wait time by a factor, if $w_i=100$ and $\\text{reduction\\_factor}=0.9$, then having 1 additional staff would mean $\\text{adjusted\\_wait\\_time}_i=100*0.9^{6-5}=90$\n",
+    "- $\text{reduction\_factor}$: each additional staff reduces the wait time by a factor, if $w_i=100$ and $\text{reduction\_factor}=0.9$, then having 1 additional staff would mean $\text{adjusted\_wait\_time}_i=100*0.9^{6-5}=90$\n",
     "- $w_i$: wait time for attraction $i$\n",
     "- $m$: the minimum number of staff to be allocated per ride\n",
     "\n",
     "### Total wait time\n",
     "\n",
     "Using the previous adjusted wait time function, the total wait time after adjustment can be represented as:\n",
-    "$$\\text{Total wait time} = \\sum_{i=1}^n \\text{adjusted\\_wait\\_time}_i = \\sum_{i=1}^{n} w_i \\times \\text{reduction\\_factor}^{x_i - m}$$\n",
+    "$$\text{Total wait time} = \sum_{i=1}^n \text{adjusted\_wait\_time}_i = \sum_{i=1}^{n} w_i \times \text{reduction\_factor}^{x_i - m}$$\n",
     "\n",
     "### Objective function\n",
     "Our objective is to minimise the total adjusted wait time. This can be represented as:\n",
-    "$$\\text{Minimize } \\sum_{i=1}^{n} w_i \\times \\text{reduction\\_factor}^{x_i - m}$$\n",
+    "$$\text{Minimize } \sum_{i=1}^{n} w_i \times \text{reduction\_factor}^{x_i - m}$$\n",
     "\n",
     "### Constraints\n",
     "Constraint 1: the sum of staff allocations across all attractions should not exceed the total number of staff available. This can be represented as:\n",
-    "$$\\sum_{i=1}^{n} x_i \\leqslant T$$\n",
+    "$$\sum_{i=1}^{n} x_i \leqslant T$$\n",
     "where:\n",
     "- $x_i$: the number of staff allocated to attraction $i$\n",
     "- $T$: the total number of staff available on the chosen date\n",
     "\n",
     "Constraint 2: each ride must have at least the minimum number of required staff, as assigned by USS. This can be represented as:\n",
-    "$$x_i \\geqslant m \\quad \\forall i \\in {1,2,...,n}$$\n",
+    "$$x_i \geqslant m \quad \forall i \in {1,2,...,n}$$\n",
     "where:\n",
     "- $x_i$: the number of staff allocated to attraction $i$\n",
     "- $m$: the minimum number of staff to be allocated per ride"
