--- a/notebooks/Q8_ethics_and_privacy_enhancements/Q8_ethics_and_privacy_enhancements.ipynb
+++ b/notebooks/Q8_ethics_and_privacy_enhancements/Q8_ethics_and_privacy_enhancements.ipynb
@@ -529,14 +529,14 @@
     "noisy_age, initial_age = noisy_average(df, 'age')\n",
     "\n",
     "# Output the noisy average\n",
-    "print(f\"Noisy average age of reviewer: {noisy_age}, Initial average age of reviewe: {initial_age}\")\n"
+    "print(f\"Noisy average age of reviewer: {noisy_age}, Initial average age of reviewer: {initial_age}\")\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This example shows how this technique can ensure individual privacy in the results of aggregated queries. Those who have are not immediately in contact with the sensitive data cannot infer the data of a specific individual by examining the aggregated result, even if they have access to all other data points. This may be trivial for age data, but can have many implications for more sensitive data such as incomes. "
+    "This example shows how this technique can ensure individual privacy in the results of aggregated queries. Those who are not immediately in contact with the sensitive data cannot infer the data of a specific individual by examining the aggregated result, even if they have access to all other data points. This may be trivial for age data, but can have many implications for more sensitive data such as incomes. "
    ]
   },
   {
