--- a/data processing/daily_average_wait_time_generation.ipynb
+++ b/data processing/daily_average_wait_time_generation.ipynb
@@ -28,7 +28,7 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "file_path = '/Users/liyuan/DSA3101/Analysis/combined_wait_time_df.csv'  \n",
+    "file_path = '../data/combined_wait_time_df.csv'  \n",
     "wait_time_df = pd.read_csv(file_path)"
    ]
   },
