--- a/data processing/feature_engineering.ipynb
+++ b/data processing/feature_engineering.ipynb
@@ -21,7 +21,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "real_survey_data = pd.read_csv('/Users/liyuan/DSA3101/Final Synthetic Data Generation/survey_data_cleaned.csv')"
+    "real_survey_data = pd.read_csv('../data/survey_data_cleaned.csv')"
    ]
   },
   {
