Update survey_data_analysis.ipynb file path

--- a/data processing/survey_data_analysis.ipynb
+++ b/data processing/survey_data_analysis.ipynb
@@ -100,7 +100,7 @@
     "import seaborn as sns\n",
     "from collections import Counter\n",
     "\n",
-    "real_survey_data = pd.read_csv('/Users/liyuan/DSA3101/Final Synthetic Data Generation/survey_data_cleaned.csv')"
+    "real_survey_data = pd.read_csv('../data/survey_data_cleaned.csv')"
    ]
   },
   {
