Update B3_resource_allocation_optimization.ipynb file path

--- a/subgroup B/B3_resource_allocation_optimization.ipynb
+++ b/subgroup B/B3_resource_allocation_optimization.ipynb
@@ -57,7 +57,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "collated_forecasts_df = pd.read_csv('collated_forecasts_per_ride.csv')"
+    "collated_forecasts_df = pd.read_csv('../data/collated_forecasts_per_ride.csv')"
    ]
   },
   {
