Update B2_optimise_guest_experience.ipynb edited comments

--- a/subgroup B/B2_optimise_guest_experience.ipynb
+++ b/subgroup B/B2_optimise_guest_experience.ipynb
@@ -1558,8 +1558,8 @@
     "\n",
     "simulation_df.head()\n",
     "\n",
-    "simulation_df.to_csv(\"simulation_df.csv\")\n",
-    "attendance_df.to_csv(\"attendance_df.csv\")"
+    "# simulation_df.to_csv(\"simulation_df.csv\")\n",
+    "# attendance_df.to_csv(\"attendance_df.csv\")"
    ]
   },
   {
@@ -1703,7 +1703,7 @@
     "final_results = simulate_2_weeks(simulation_df, attendance_df, forecast_data)\n",
     "final_results.head(20)\n",
     "\n",
-    "final_results.to_csv(\"final_results.csv\")\n"
+    "# final_results.to_csv(\"final_results.csv\")\n"
    ]
   },
   {
