--- a/subgroup B/B3_resource_allocation_optimization.ipynb
+++ b/subgroup B/B3_resource_allocation_optimization.ipynb
@@ -214,9 +214,9 @@
    ],
    "source": [
     "fig_forecast, ax_forecast = plt.subplots()\n",
-    "attractions = list(attractions)\n",
-    "forecasts = list(forecasts)\n",
-    "ax_forecast.barh(attractions, forecasts)\n",
+    "attractions_list = list(attractions)\n",
+    "forecasts_list = list(forecasts)\n",
+    "ax_forecast.barh(attractions_list, forecasts_list)\n",
     "ax_forecast.set_xlabel(\"Wait time\")\n",
     "ax_forecast.set_ylabel(\"Attraction name\")\n",
     "ax_forecast.set_title(f\"The wait time for each attraction on {date}\")\n",
