--- a/subgroup A/A2_segmentation_model.ipynb
+++ b/subgroup A/A2_segmentation_model.ipynb
@@ -17,7 +17,7 @@
     "from scipy.stats import chi2_contingency\n",
     "import scipy.stats as stats\n",
     "from scipy.cluster.hierarchy import fcluster\n",
-    "from scipy.spatial.distance import pdist\n",
+    "from scipy.spatial.distance import linkage\n",
     "from scipy.cluster.hierarchy import dendrogram"
    ]
   },
