--- a/subgroup A/A2_segmentation_model.ipynb
+++ b/subgroup A/A2_segmentation_model.ipynb
@@ -134,7 +134,7 @@
     "    cbar=True\n",
     ")\n",
     "plt.title(\"Correlations with Overall Satisfaction\")\n",
-    "plt.xlabel(\"Overall Satisfaction\")\n",
+    "plt.xlabel(\"")\n",
     "plt.ylabel(\"Correlation Features\")\n",
     "plt.show()"
    ]
