--- a/subgroup A/A1_satisfaction_drivers.ipynb
+++ b/subgroup A/A1_satisfaction_drivers.ipynb
@@ -45,7 +45,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "survey_data = pd.read_csv('../data/survey_data_cleaned.csv'))"
+    "survey_data = pd.read_csv('../data/survey_data_cleaned.csv')"
    ]
   },
   {
