--- a/subgroup A/A2_segmentation_model.ipynb
+++ b/subgroup A/A2_segmentation_model.ipynb
@@ -75,7 +75,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "survey_data = pd.read_csv('/Users/liyuan/DSA3101/Sub Group A Q2/survey_data_17features.csv')"
+    "survey_data = pd.read_csv('../data/survey_data_17features.csv')"
    ]
   },
   {
