fixed code error 2

--- a/subgroup A/A1_satisfaction_drivers.ipynb
+++ b/subgroup A/A1_satisfaction_drivers.ipynb
@@ -243,6 +243,7 @@
     "survey_data[entry_experience_features] = scaler.fit_transform(survey_data[entry_experience_features])\n",
     "\n",
     "# Correlation Values\n",
+    "correlation_with_satisfaction = survey_data[entry_experience_features + ['overall_satisfaction']].corr()['overall_satisfaction'].drop('overall_satisfaction')\n",
     "print(\"Correlation with Overall Satisfaction for Entry Experience Metrics:\")\n",
     "print(correlation_with_satisfaction)\n",
     "\n",
